# p32-animatronic-bot

./: .env  .gitattributes  .gitignore  AI-AGENT-RULES-PRINTABLE.md  ANIMATION-IMPLEMENTATION-SUMMARY.md  ARCHITECTURE_DECISION_LOG.md  AUTO_BUILD_README.md  AnimationFrame.cpp  BOT_COMPLETENESS_REPORT.md  BUILD_INSTRUCTIONS.md  BUILD_READY.md  CAMERA_COST_ANALYSIS.md  CAMERA_COST_RELIABILITY_ANALYSIS.md  CAMERA_DECISION_QUICK_REFERENCE.md  CAMERA_RESEARCH_FINDINGS.md  CAMERA_SYSTEM_ANALYSIS.md  CLEANUP_COMPLETE.md  CMakeLists.txt  CODE-STATUS.md  COMPLETE-BUILD-GUIDE.md  COMPONENT-IMPLEMENTATION-STATUS.md  COMPONENT_DUPLICATE_ANALYSIS.md  COMPONENT_ORGANIZATION_PLAN.md  COMPONENT_REGISTRY_REPORT.md  COMPONENT_REGISTRY_VERIFICATION_SUMMARY.md  COMPONENT_SCAFFOLDING_README.md  COMPONENT_STANDARDIZATION_README.md  CONFIG_TREE_ASCII_REPORT.txt  CONSOLIDATED_PROJECT_RULES.md  COPILOT-QUICK-REFERENCE.md  COPILOT-USAGE-GUIDE.md  CORE-SERVICE-INTERFACE-CHECKLIST.md  CRITICAL_DISPLAY_PIPELINE_ISSUES.md  CURRENT-STATUS.md  DISPLAY_BUFFER_ANALYSIS_300KB.md  DISPLAY_BUFFER_SIZE_SPREADSHEET.csv  DISPLAY_BUFFER_SIZE_SPREADSHEET.md  DRAGON_LEG_IMPLEMENTATION_SUMMARY.md  DUAL_EYE_TEST_README.md  DYNAMIC_PIN_ASSIGNMENT_SYSTEM.md  (+270 more)
.github/: 01_ARCHITECTURE_OVERVIEW.md  02_BUILD_WORKFLOW.md  03_COMPONENT_SYSTEM_RULES.md  04_CODING_STANDARDS.md  06_TIMING_AND_EXECUTION.md  07_JSON_CONFIG_STRUCTURE.md  08_SHARED_STATE_CLASSES.md  09_BUILD_ERRORS.md  10_MEMORY_PERFORMANCE.md  AGENT_DOCUMENTATION_INDEX.md  AGENT_OPERATIONS_RULES.md  AI-AGENT-RULES.md  ASCII-ENCODING-GUIDE.md  CLEAN_POINTER_CASTING_ARCHITECTURE.md  COMPREHENSIVE_SENSOR_ARCHITECTURE.md  CROSS-DOCUMENT-CONSISTENCY-REPORT.md  DECISION-PROTOCOL.md  DEVELOPMENT_RULES.md  JSON_PARSING_RULES.md  (+25 more)
components/p32_main/: CMakeLists.txt  component_tables.cpp  main.cpp  p32_component_functions.cpp  p32_components.cmake  p32_dispatch_tables.cpp
components/p32_main/components/: spi_bus.cpp
components/p32_main/core/memory/: SharedMemory.cpp
main/: CMakeLists.txt  component_tables.cpp
p32_main/: CMakeLists.txt
src/: CMakeLists.txt  Mood.cpp  TestPicker.cpp  actTable.c  actTable.h  bot_components.c  bot_components.cpp  component_stubs.c  component_stubs.cpp  component_tables.c  component_tables.cpp  goblin_components.c  goblin_components.cpp  initTable.c  initTable.h  main.c  main.cpp  p32_android_personality.c  p32_android_personality.cpp  p32_animation_stream.cpp  p32_audio.c  p32_audio.cpp  p32_behavior.c  p32_behavior.cpp  p32_component_config.h  p32_component_config.hpp  p32_component_system.c  p32_component_system.cpp  p32_component_table.c  p32_component_table.cpp  p32_component_table.h  p32_component_tables.c  p32_component_tables.cpp  p32_component_tables_generated.cpp  p32_components.cmake  p32_components.cmake.backup  p32_core.c  p32_core.cpp  p32_display.c  p32_display.cpp  (+42 more)
src/components/: 2.5x1.5 Inch TFT LCD Display.cpp  2_5x1_5_inch_tft_lcd_display.cpp  CMakeLists.txt  GC9A01 Circular LCD Display.cpp  HC-SR04 Ultrasonic Distance Sensor.cpp  I2S Digital Speaker Module.cpp  arm_controller.cpp  audio.cpp  audio.src  bluetooth_central.cpp  bluetooth_central.src  center_eye.cpp  center_eye.src  component_2_5x1_5_inch_tft_lcd_display.src  debug_controller.cpp  elbow_flexion.cpp  elbow_flexion.src  esp_now_mesh.cpp  esp_now_mesh.src  eye_display.cpp  foot_controller.cpp  forehead_leds.cpp  forehead_leds.src  gc9a01.cpp  gc9a01.hpp  gc9a01.src  gc9a01_circular_lcd_display.cpp  gc9a01_circular_lcd_display.src  gc9a01_circular_lcd_display_verbose.cpp  gc9a01_circular_lcd_display_verbose.src  goblin_behavior_engine.cpp  goblin_behavior_engine.src  goblin_ear_left.c  goblin_ear_right.c  goblin_ear_right.cpp  goblin_eye.cpp  goblin_eye.src  goblin_eye_left.c  goblin_eye_left.cpp  goblin_eye_right.c  (+130 more)
src/components/creature_specific/: android_eye.src  cat_eye.src  goblin_eye.src  goblin_eye_2.src  goblin_left_eye.src  goblin_mouth.src  goblin_nose.src  goblin_right_eye.src  goblin_speaker.src  pixie_eye.src  robot_eye.src  spine_flexion_servo.src  waist_rotation_servo.src
src/components/drivers/: generic_spi_display.src  spi_display_bus.src
src/components/functional/: goblin_behavior_engine.cpp  goblin_mood.cpp  goblin_personality.cpp  goblin_pirate_personality.cpp
src/components/generic_spi_display/: generic_spi_display.src
src/components/system/: bluetooth_central.cpp  network_monitor.c  network_monitor.cpp  power_monitor.cpp  serial_console.c  serial_console.cpp  system_core.cpp  watchdog.c  watchdog.cpp
src/components/test/: test_left_eye.cpp  test_right_eye.cpp
src/core/: SharedMemory.cpp
src/core/com/: p32_mesh_coordinator.c  p32_mesh_master.cpp
src/core/memory/: SharedMemory.cpp
src/goblin_full/: component_2_5x1_5_inch_tft_lcd_display.src  gc9a01_circular_lcd_display.src  gc9a01_new.src  goblin_behavior_engine.src  goblin_head.src  goblin_personality.src  goblin_speaker_STUB.src  goblin_torso.src  hc_sr04_ultrasonic_distance_sensor.src  hc_sr04_ultrasonic_distance_sensor_verbose.src  index_finger.src  mouth.src  network_monitor.src  power_manager.src  power_monitor.src  right_ear_microphone.src  serial_console.src  speaker.src  spine_extension_servo.src  telemetry_hub.src  test_head.src  torso_speaker.src  watchdog.src
src/mesh/: p32_mesh_coordinator.c  p32_mesh_coordinator.cpp  p32_mesh_coordinator.h  p32_mesh_master.c  p32_mesh_master.cpp  p32_mesh_master.h
src/subsystems/goblin/: goblin_component_functions.hpp
src/subsystems/goblin_head/: goblin_head_component_functions.cpp  goblin_head_component_functions.hpp  goblin_head_dispatch_tables.cpp  goblin_head_dispatch_tables.hpp  goblin_head_main.cpp
src/subsystems/goblin_torso/: goblin_torso_component_functions.cpp  goblin_torso_component_functions.hpp  goblin_torso_dispatch_tables.cpp  goblin_torso_dispatch_tables.hpp  goblin_torso_main.cpp
src/subsystems/left_arm/: left_arm_component_functions.cpp  left_arm_component_functions.hpp
src/subsystems/test_head/: test_head_component_functions.cpp  test_head_dispatch_tables.cpp  test_head_main.cpp
(+3924 files in other folders)
